# ecky

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  GEMINI.md  README.md  commit_req.json  commitlint.config.cjs  fix_params.cjs  index.html  new_macro.ecky  nginx.conf  package-lock.json  package.json  patch_gen_rs.js  patch_lib_rs.cjs  patch_parampanel.js  patch_session_flow.js  patch_session_flow.mjs  patch_session_phase.js  playwright.config.js  playwright.config.ts  release-please-config.json  render_req.json  run_qa_test.js  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/native/: direct_occt_runner.cpp
src-tauri/src/: agent_prompt.rs  bindings.rs  build123d.rs  cad_transpile.rs  component_extract.rs  component_package_runtime.rs  context.rs  contracts.rs  db.rs  debug_ast.rs  displacement.rs  ecky_deterministic.rs  ecky_ir.rs  ecky_ir_patterns.rs  ecky_language_surface.rs  freecad.rs  freecad_library.rs  legacy_python_to_ecky_ir.rs  lib.rs  lithophane.rs  llm.rs  llm_context.rs  main.rs  model_runtime.rs  models.rs  parser_test.rs  project_mirror.rs  runtime_capabilities.rs  sketch_brep_validation.rs  sketch_draft_runtime.rs  source_flavor.rs  test_get.rs  test_macro.rs  topology_target_ids.rs
src-tauri/src/commands/: assets.rs  component_package.rs  config.rs  design.rs  generation.rs  history.rs  macro_ast.rs  mod.rs  render.rs  session.rs  sketch.rs  speech.rs
src-tauri/src/contracts/: agent.rs  component.rs  config.rs  error.rs  geometry.rs  manifest.rs  mcp.rs  mod.rs  render.rs  verify.rs
src-tauri/src/ecky_cad_host/: direct_occt.rs  direct_occt_executor.rs  direct_occt_normalize.rs  direct_occt_runner.rs  direct_occt_runtime.rs  direct_occt_sdk.rs  mod.rs  native_parity_harness.rs  svg_profile.rs  text_profile.rs
src-tauri/src/ecky_core_ir/: mod.rs  signatures.rs
src-tauri/src/ecky_ir/: backend_capabilities.rs  build123d_lowering.rs  build123d_lowering_tests.rs  edge_ops.rs  eval_scalar.rs  freecad_lowering.rs  mesh_ops.rs  mod.rs  model.rs  op_suggest.rs  runtime.rs  shared.rs  sketch.rs  syntax.rs  tests.rs
src-tauri/src/ecky_scheme/: bootstrap.rs  cad.rs  clip_full.ecky  compiler.rs  core.rs  mod.rs  params.rs
src-tauri/src/mcp/: authoring.rs  contracts.rs  handlers.rs  macro_buffer.rs  mod.rs  runtime.rs  server.rs  skill.rs
src-tauri/src/mcp/handlers/: artifact_read.rs  compare.rs  component.rs  ecky_ast.rs  macro_buffer.rs  mod.rs  printability.rs  project_folder.rs  render_preview.rs  semantic.rs  session.rs  system.rs  target_detail.rs  target_read.rs  tests.rs  thread_read.rs  verify.rs  version_write.rs
src-tauri/src/mcp/handlers/ecky_ast/: operations.rs  shape_graph.rs
src-tauri/src/services/: agent_dialogue.rs  agent_versions.rs  author_verification_foundation.rs  design.rs  history.rs  mod.rs  printability.rs  render.rs  session.rs  sketch_preview_draft.rs  structural_verification.rs  target.rs
src-tauri/tests/: component_package_contract.rs  ecky_cli.rs  semantic_ast_baseline_guards.rs  sketch_brep_validation_contract.rs  sketch_draft_contract.rs
src-tauri/tests/fixtures/: generated_runner_report.json  imported_runner_report.json  mcp_regression_fixture.sqlite
src-tauri/tests/fixtures/cad/reference/: thomas_modular_ramp_legacy.py
src-tauri/tests/fixtures/cad/surface/: canonical_cup.build123d.py  canonical_cup.ecky  compound_boolean.build123d.py  compound_boolean.ecky  direct_occt_snap_clip.ecky  filter_repeat_cutters.ecky  frame_peg_attach.build123d.py  frame_peg_attach.ecky  iphone_case_flat.ecky  linspace_bspline.ecky  list_zip_points.ecky  organic_bspline_loop.ecky  path_frame_pose.build123d.py  path_frame_pose.ecky  (+18 more)
src-tauri/tests/snapshots/component-unification/: core-digest.snap  fixture-lock.snap
src-tauri/tests/snapshots/units/: permissive-emit-digest.snap
(+635 files in other folders)
