[package]
name = "ecky_cad"
version = "0.0.1"
description = "Prompt-driven 3D CAD designer"
authors = ["Bogdan"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
sha2 = "0.10.9"
base64 = "0.22.1"
rand = "0.8"
regex = "1.12.3"
rustpython-parser = "0.4.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[lib]
name = "ecky_cad_lib"
path = "src/lib.rs"

[[bin]]
name = "ecky_cad"
path = "src/main.rs"
